--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,17 +1,26 @@
 .header {
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 1px solid currentColor;
-  gap: 1rem;
+	padding-block: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-bottom: 1px solid currentColor;
+	gap: 1rem;
 }
 
 .brand {
-  font-size: 1.5rem;
-  text-decoration: none;
-  color: inherit;
-  display: inline-block;
-  padding: 0.3rem 0.5rem;
-  border: 1px solid currentColor;
+	font-size: 1.5rem;
+	text-decoration: none;
+	color: inherit;
+	display: inline-block;
+	padding: 0.3rem 0.5rem;
+	border: 1px solid currentColor;
+}
+
+.container {
+	width: min(calc(100% - 2rem), 1000px);
+	margin: 0 auto;
+}
+
+.section {
+	position: relative;
 }
